--- a/index.html
+++ b/index.html
@@ -9,75 +9,96 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #0f172a; /* Dark base for depth */
-      overflow: hidden;
-      font-family: 'Playfair Display', serif;
-      color: white;
-    }
-
-    /* Blurred gradient blobs (modern "grainy shading" effect) */
-    .background {
-      position: absolute;
-      inset: 0;
-      overflow: hidden;
-      z-index: -1;
-    }
-
-    .blob {
-      position: absolute;
-      border-radius: 50%;
-      filter: blur(80px);
-      opacity: 0.8;
-      mix-blend-mode: screen; /* Creates soft glowing blend */
-    }
-
-    .blob:nth-child(1) {
-      width: 600px;
-      height: 600px;
-      background: radial-gradient(circle, #ff6b6b, transparent);
-      top: -20%;
-      left: -10%;
-    }
-
-    .blob:nth-child(2) {
-      width: 800px;
-      height: 800px;
-      background: radial-gradient(circle, #4ecdc4, transparent);
-      bottom: -30%;
-      right: -20%;
-    }
-
-    .blob:nth-child(3) {
-      width: 500px;
-      height: 500px;
-      background: radial-gradient(circle, #ffe66d, transparent);
-      top: 40%;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-
-    h1 {
-      font-size: 4rem;
-      text-align: center;
-      text-shadow: 0 4px 20px rgba(0,0,0,0.5);
-    }
-
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 4rem;
+      * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
       }
-    }
+
+      body {
+          height: 100vh;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: #0f172a;
+          overflow: hidden;
+          font-family: 'Playfair Display', serif;
+          color: white;
+      }
+
+      .background {
+          position: absolute;
+          inset: 0;
+          overflow: hidden;
+          z-index: -1;
+      }
+
+      .blob {
+          position: absolute;
+          border-radius: 50%;
+          filter: blur(80px);
+          opacity: 0.7;
+          mix-blend-mode: screen;
+          animation: float 20s infinite ease-in-out;
+      }
+
+      /* Slow gentle floating animation */
+      @keyframes float {
+          0% {
+              transform: translate(0, 0) scale(1);
+          }
+
+          50% {
+              transform: translate(80px, -80px) scale(1.1);
+          }
+
+          100% {
+              transform: translate(0, 0) scale(1);
+          }
+      }
+
+      .blob:nth-child(1) {
+          width: 600px;
+          height: 600px;
+          background: radial-gradient(circle, #ff6b6b, transparent);
+          top: -20%;
+          left: -10%;
+          animation-delay: 0s;
+          animation-duration: 25s;
+      }
+
+      .blob:nth-child(2) {
+          width: 800px;
+          height: 800px;
+          background: radial-gradient(circle, #4ecdc4, transparent);
+          bottom: -30%;
+          right: -20%;
+          animation-delay: 5s;
+          animation-duration: 30s;
+      }
+
+      .blob:nth-child(3) {
+          width: 500px;
+          height: 500px;
+          background: radial-gradient(circle, #ffe66d, transparent);
+          top: 40%;
+          left: 50%;
+          transform: translateX(-50%);
+          animation-delay: 10s;
+          animation-duration: 22s;
+      }
+
+      h1 {
+          font-size: 4.5rem; /* or whatever size you chose last time */
+          text-align: center;
+          text-shadow: 0 4px 20px rgba(0,0,0,0.5);
+      }
+
+      @media (max-width: 768px) {
+          h1 {
+              font-size: 3rem;
+          }
+      }
   </style>
 </head>
 <body>
